--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // dependencies for contract interaction
-    api 'org.web3j:infura:3.3.1-android'
-   // api 'org.web3j:core:3.1.1-android'
+  implementation 'org.web3j:infura:3.3.1-android'
+   //noinspection GradleDependency
+  // api 'org.web3j:core:3.1.1-android'
 
+   // implementation 'org.web3j:web3j-infura:4.8.7'
     implementation 'org.web3j:core:4.8.7'
+
+   // implementation 'org.web3j:web3j:4.8.7'
 }
 
 kapt {
